# GPDA

./: .gitignore  ALGORITHM.md  BENCHMARKS.md  README.md  SYNTAX.md  gpda.py  gpda_scannerless.py
cpp/: CMakeLists.txt  scannerless.cpp  scannerless.hpp  test_scannerless.cpp  test_tokenized.cpp  tokenized.cpp  tokenized.hpp
cpp/benchmarks/drivers/: bench_common.hpp  run_antlr.cpp  run_antlr_arith.cpp  run_flex_bison.cpp  run_flex_bison_arith.cpp  run_ours_scannerless.cpp  run_ours_scannerless_arith.cpp  run_ours_tokenized.cpp  run_ours_tokenized_arith.cpp
cpp/benchmarks/grammars/: Arith.g4  JSON.g4  arith.eebnf  arith.l  arith.y  arith_ambig.eebnf  arith_ambig_tokenized.eebnf  arith_tokenized.epeg  json.epeg  json.l  json.y  json_tokenized.eebnf
cpp/benchmarks/inputs/: large.arith  large.json  medium.arith  medium.json  ops10.arith  ops100.arith  ops1000.arith  ops11.arith  ops12.arith  ops13.arith  ops14.arith  ops15.arith  ops20.arith  ops200.arith  ops5.arith  ops50.arith  ops500.arith  ops6.arith  ops7.arith  ops8.arith  ops9.arith  small.arith  small.json  tiny.arith  tiny.json
cpp/benchmarks/scripts/: emit_cpp_graph.py  emit_tokenized_graph.py  generate_arith_inputs.py  generate_inputs.py  run_all.py  run_arith.py
